feature: now will put the default kit set (a ) into a new empty kit, as the slot placeholder to reduce the confusion.